# Stasm-android

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/stasm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/stasm/: asm.cpp  faceroi.cpp  misc.h
app/src/main/cpp/stasm/MOD_1/: facedet.cpp
app/src/main/java/com/example/stasm/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/stasm/: ExampleUnitTest.java
